Office Bearers Page Fixed for Mobile View * Card are centrally aligned * Nav Tab is now horizontally scrollable * Fixed bug: active tab doesn't deactivate when another tab is active

--- a/css/team-style.css
+++ b/css/team-style.css
@@ -49,6 +49,7 @@
 #tile-1 .nav-tabs
 {
   width: 58.75%;
+  max-height: 36px;
   position:relative;
   border:none!important;
 /*   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2); */
@@ -79,8 +80,25 @@
   z-index:5;
   bottom:0;
   transition:all .4s linear;
-  
+
 }
+@media only screen and (max-width: 1139.5px) {
+  #tile-1 .slider {
+    display: none;
+  }
+  #tile-1 .nav-tabs .active::after
+  {
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left:0px;
+    background-color: #00A56A;
+    height: 4px;
+    border-radius: 3px;
+    width: 100%;
+  }
+}
+
 #tile-1 .slider-holder
 {
   width:100%;
@@ -167,7 +185,7 @@ margin-bottom:10px;
   width: 100%;
   height: 100px;
   float: left;
-  z-index: 99;
+  z-index: 98;
 }
 .our-team {
   padding: 0px;
@@ -184,6 +202,7 @@ margin-bottom:10px;
 }
 .our-team:hover {
   transform: scale(1.1625) translateY(8.125%);
+  z-index: 99;
 }
 
 .our-team .pic {
@@ -258,6 +277,6 @@ margin-bottom:10px;
 }
 @media only screen and (max-width: 990px) {
   .our-team {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
   }
 }
